# random-matrix-api

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  tttt.py
app/: main.py
app/api/: compute.py  config.py  marchenko_pastur.py  router.py  tescik.py
app/models/: parameters.py
tests/: test_compute.py
