[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "random-matrix-api"
version = "0.1.0"
description = "API for calculations on random matrices"
authors = [
    { name = "Przemysław Ryś", email = "przemek12413@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "fastapi==0.120.2",
    "h11==0.16.0",
    "idna==3.11",
    "pydantic==2.12.3",
    "pydantic_core==2.41.4",
    "sniffio==1.3.1",
    "starlette==0.49.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.38.0",
    "git+https://github.com/Krzemon/mp-package.git@main#egg=mp_package&subdirectory=matrix_utils"
]

[tool.setuptools.packages.find]
where = ["app"]
